# media-player

./: .gitignore  Cargo.toml  README.md  dev.rs  index.html  main.js  package-lock.json  package.json  player_ui  preload.js  renderer.js  style.css  vite.config.js  vite.config.mjs  wrapper.h
.cargo/: config.toml
app/: Cargo.toml  build.rs
app/src/: app.rs  app_state.rs  application.rs  icon_config.rs  lib.rs  main.rs  window_manager.rs
app/src/states/: app_state.rs  icon_state.rs  mod.rs  playlist_state.rs  window_state.rs
app/src/ui/: icons.rs  library_view.rs  mod.rs  player_view.rs  playlist_view.rs  render.rs  styles.rs  theme.rs
core/: Cargo.toml
core/src/: lib.rs  library.rs  player.rs  playlist.rs
core/src/audio/: buffer.rs  codec_registry.rs  decoder.rs  device.rs  diagnostics.rs  mod.rs  opus_decoder.rs  position.rs  resampler.rs
core/src/player/: actions.rs  mod.rs  state.rs
data/: playlists.json  window_position.json
logs/: player_log_20250324_022742.txt  player_log_20250324_025940.txt  player_log_20250324_030642.txt  player_log_20250324_061942.txt  player_log_20250330_055652.txt  player_log_20250330_100210.txt  player_log_20250330_113724.txt  player_log_20250330_114252.txt  player_log_20250330_120546.txt  player_log_20250330_121151.txt  player_log_20250330_122016.txt  player_log_20250330_123951.txt  player_log_20250330_124555.txt
media-app/src/: main.rs
media-audio/src/: audio.rs  lib.rs  player.rs
media-bluetooth/src/: lib.rs
media-core/src/: lib.rs  playlist.rs  settings.rs
media-gui/src/: lib.rs
media-player/: CmakeLists.txt  app.rc  build.ps1  icon.rc
media-player/src/: bluetooth_server.cpp  bluetooth_server.h  main.cpp  player.cpp  player.h  player_audio.cpp  player_playlists.cpp  player_plugin.h  player_ui.cpp  protocol.cpp  protocol.h  state_manager.cpp  state_manager.h
renderer/: dragAndDrop.js  index.html  library.js  libraryRenderer.js  player.js  playlistManager.js  playlists.js  renderer.js  style.css  trackManager.js  ui.js  uuid.js
rust_test/: Cargo.toml
rust_test/src/: main.rs
scripts/: build.rs  dev.ps1
src/: audio.rs  bluetooth.rs  gui.rs  lib.rs  main.rs  player.rs  playlist.rs
test/: CMakeLists.txt
tests/: integration_test.rs
ui/: Cargo.toml
ui/src/: lib.rs  library_view.rs  player_view.rs  playlist_view.rs
