[workspace]
resolver = "2"
members = [
    "app",
    "core"
]

[package]
name = "media-player-dev"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dev"
path = "dev.rs"

[dependencies]
notify = "5.0"
ctrlc = "3.2"
iced = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"