[package]
name = "app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "media-player-app"
path = "src/main.rs"

[lib]
name = "player_ui"
crate-type = ["cdylib", "rlib"]

[dependencies]
iced = "0.13.1"
core = { path = "../core" }
log = "0.4"
env_logger = "0.10"
ctrlc = "3.2"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"